toolchain/chidori-static-analysis/src/language/javascript/snapshots/chidori_static_analysis__language__javascript__parse__tests__assignment_to_value.snap
---
source: chidori-static-analysis/src/language/javascript/parse.rs
description: "const x = 1\n"
---
- - AssignmentToStatement
  - IdentifierReferredTo:
      name: x
      in_scope: false
      exposed: true
- - AssignmentFromStatement
