toolchain/chidori-static-analysis/src/language/javascript/snapshots/chidori_static_analysis__language__javascript__parse__tests__destructuring_assignment_patterns.snap
---
source: chidori-static-analysis/src/language/javascript/parse.rs
description: "// Object destructuring\nconst { a, b } = { a: 1, b: 2 };\nconst { c: renamed, d = 'default' } = { c: 3 };\nconst { e: { f } } = { e: { f: 4 } };\n\n// Array destructuring\nconst [g, h] = [5, 6];\nconst [i, , j] = [7, 8, 9];\nconst [k, ...rest] = [10, 11, 12];\n\n// Mixed destructuring\nconst { l, m: [n, o] } = { l: 13, m: [14, 15] };\n\n// Destructuring in function parameters\nfunction printPerson({ name, age = 30 }) {\n    console.log(`${name} is ${age} years old`);\n}\n\n// Destructuring with computed property names\nconst key = 'p';\nconst { [key]: value } = { p: 16 };\n\n// Nested destructuring\nconst { q: { r: [s, { t }] } } = { q: { r: [17, { t: 18 }] } };\n\n// Destructuring with rest properties\nconst { u, ...others } = { u: 19, v: 20, w: 21 };\n\n// Destructuring in for...of loops\nconst items = [{ id: 1, name: 'Item 1' }, { id: 2, name: 'Item 2' }];\nfor (const { id, name } of items) {\n    console.log(`${id}: ${name}`);\n}\n\n// Destructuring with alias and default value\nconst { x: newX = 100 } = {};\n\n// Array destructuring with default values\nconst [y = 200, z = 300] = [22];\n\n// Destructuring returned arrays\nfunction returnArray() {\n    return [1, 2, 3];\n}\nconst [first, ...restArray] = returnArray();\n\n// Swapping variables\nlet aa = 'first', bb = 'second';\n[aa, bb] = [bb, aa];\n"
---
- - AssignmentToStatement
  - IdentifierReferredTo:
      - a
      - false
  - IdentifierReferredTo:
      - b
      - false
- - AssignmentFromStatement
- - AssignmentToStatement
  - IdentifierReferredTo:
      - c
      - false
  - IdentifierReferredTo:
      - renamed
      - false
  - IdentifierReferredTo:
      - d
      - false
  - Constant: default
- - AssignmentFromStatement
- - AssignmentToStatement
  - IdentifierReferredTo:
      - e
      - false
  - IdentifierReferredTo:
      - f
      - false
- - AssignmentFromStatement
- - AssignmentToStatement
  - IdentifierReferredTo:
      - g
      - false
  - IdentifierReferredTo:
      - h
      - false
- - AssignmentFromStatement
- - AssignmentToStatement
  - IdentifierReferredTo:
      - i
      - false
  - IdentifierReferredTo:
      - j
      - false
- - AssignmentFromStatement
- - AssignmentToStatement
  - IdentifierReferredTo:
      - k
      - false
  - IdentifierReferredTo:
      - rest
      - false
- - AssignmentFromStatement
- - AssignmentToStatement
  - IdentifierReferredTo:
      - l
      - false
  - IdentifierReferredTo:
      - m
      - false
  - IdentifierReferredTo:
      - n
      - false
  - IdentifierReferredTo:
      - o
      - false
- - AssignmentFromStatement
- - InFunction:
      - printPerson
      - start: 368
        end: 460
  - FunctionArguments
  - IdentifierReferredTo:
      - name
      - false
  - IdentifierReferredTo:
      - age
      - false
- - InFunction:
      - printPerson
      - start: 368
        end: 460
  - InCallExpression
  - Attribute: log
  - IdentifierReferredTo:
      - console
      - false
  - IdentifierReferredTo:
      - name
      - true
  - IdentifierReferredTo:
      - age
      - true
- - InFunction:
      - printPerson
      - start: 368
        end: 460
- - AssignmentToStatement
  - IdentifierReferredTo:
      - key
      - false
- - AssignmentFromStatement
  - Constant: p
- - AssignmentToStatement
  - IdentifierReferredTo:
      - value
      - false
- - AssignmentFromStatement
- - AssignmentToStatement
  - IdentifierReferredTo:
      - q
      - false
  - IdentifierReferredTo:
      - r
      - false
  - IdentifierReferredTo:
      - s
      - false
  - IdentifierReferredTo:
      - t
      - false
- - AssignmentFromStatement
- - AssignmentToStatement
  - IdentifierReferredTo:
      - u
      - false
  - IdentifierReferredTo:
      - others
      - false
- - AssignmentFromStatement
- - AssignmentToStatement
  - IdentifierReferredTo:
      - items
      - false
- - AssignmentFromStatement
- - IdentifierReferredTo:
      - items
      - true
  - InCallExpression
  - Attribute: log
  - IdentifierReferredTo:
      - console
      - false
  - IdentifierReferredTo:
      - id
      - false
  - IdentifierReferredTo:
      - name
      - true
- - IdentifierReferredTo:
      - items
      - true
  - AssignmentToStatement
  - IdentifierReferredTo:
      - x
      - false
  - IdentifierReferredTo:
      - newX
      - false
- - IdentifierReferredTo:
      - items
      - true
  - AssignmentFromStatement
- - IdentifierReferredTo:
      - items
      - true
  - AssignmentToStatement
  - IdentifierReferredTo:
      - y
      - false
  - IdentifierReferredTo:
      - z
      - false
- - IdentifierReferredTo:
      - items
      - true
  - AssignmentFromStatement
- - IdentifierReferredTo:
      - items
      - true
  - InFunction:
      - returnArray
      - start: 1106
        end: 1154
  - FunctionArguments
- - IdentifierReferredTo:
      - items
      - true
  - InFunction:
      - returnArray
      - start: 1106
        end: 1154
- - IdentifierReferredTo:
      - items
      - true
  - AssignmentToStatement
  - IdentifierReferredTo:
      - first
      - false
  - IdentifierReferredTo:
      - restArray
      - false
- - IdentifierReferredTo:
      - items
      - true
  - AssignmentFromStatement
  - InCallExpression
  - IdentifierReferredTo:
      - returnArray
      - true
- - IdentifierReferredTo:
      - items
      - true
  - AssignmentFromStatement
- - IdentifierReferredTo:
      - items
      - true
  - AssignmentToStatement
  - IdentifierReferredTo:
      - aa
      - false
- - IdentifierReferredTo:
      - items
      - true
  - AssignmentFromStatement
  - Constant: first
- - IdentifierReferredTo:
      - items
      - true
  - AssignmentToStatement
  - IdentifierReferredTo:
      - bb
      - false
- - IdentifierReferredTo:
      - items
      - true
  - AssignmentFromStatement
  - Constant: second
- - IdentifierReferredTo:
      - items
      - true
  - AssignmentToStatement
  - IdentifierReferredTo:
      - aa
      - true
  - IdentifierReferredTo:
      - bb
      - true
- - IdentifierReferredTo:
      - items
      - true
  - AssignmentFromStatement
