toolchain/chidori-static-analysis/src/language/javascript/snapshots/chidori_static_analysis__language__javascript__parse__tests__extraction_of_ch_statements.snap
---
source: chidori-static-analysis/src/language/javascript/parse.rs
expression: context_stack_references
---
- - InCallExpression
  - Attribute: configure
  - Attribute: prompt
  - IdentifierReferredTo:
      name: ch
      in_scope: true
      exposed: true
  - Constant: default
  - InCallExpression
  - Attribute: llm
  - IdentifierReferredTo:
      name: ch
      in_scope: true
      exposed: true
- - InCallExpression
  - Attribute: configure
  - Attribute: prompt
  - IdentifierReferredTo:
      name: ch
      in_scope: true
      exposed: true
  - Constant: default
