toolchain/chidori-static-analysis/src/language/javascript/snapshots/chidori_static_analysis__language__javascript__parse__tests__handling_react_hook_style_refrence.snap
---
source: chidori-static-analysis/src/language/javascript/parse.rs
description: "function createDockerfile() {\n    useHook(() => {\n       ch.prompt(\"demo\");\n    }, [otherFunction]);\n    return prompt(\"prompts/create_dockerfile\")\n}\n"
---
- - InFunction:
      - createDockerfile
      - start: 1
        end: 150
  - Params
- - InFunction:
      - createDockerfile
      - start: 1
        end: 150
  - InCallExpression
  - IdentifierReferredTo:
      - useHook
      - false
  - InAnonFunction
  - Params
- - InFunction:
      - createDockerfile
      - start: 1
        end: 150
  - InCallExpression
  - IdentifierReferredTo:
      - useHook
      - false
  - InAnonFunction
  - InCallExpression
  - Attribute: prompt
  - IdentifierReferredTo:
      - ch
      - false
  - Constant: demo
- - InFunction:
      - createDockerfile
      - start: 1
        end: 150
  - InCallExpression
  - IdentifierReferredTo:
      - useHook
      - false
  - InAnonFunction
- - InFunction:
      - createDockerfile
      - start: 1
        end: 150
  - InCallExpression
  - IdentifierReferredTo:
      - useHook
      - false
- - InFunction:
      - createDockerfile
      - start: 1
        end: 150
  - InCallExpression
  - IdentifierReferredTo:
      - prompt
      - false
  - Constant: prompts/create_dockerfile
- - InFunction:
      - createDockerfile
      - start: 1
        end: 150
