toolchain/chidori-static-analysis/src/language/javascript/snapshots/chidori_static_analysis__language__javascript__parse__tests__nothing_extracted_with_no_ch_references.snap
---
source: chidori-static-analysis/src/language/javascript/parse.rs
description: "function createDockerfile() {\n    return prompt(\"prompts/create_dockerfile\")\n}\n"
---
- - InFunction: createDockerfile
  - Params
- - InFunction: createDockerfile
  - InCallExpression
  - IdentifierReferredTo:
      - prompt
      - false
  - Constant: prompts/create_dockerfile
- - InFunction: createDockerfile
