toolchain/chidori-static-analysis/src/language/javascript/snapshots/chidori_static_analysis__language__javascript__parse__tests__report_for_simple_function-2.snap
---
source: chidori-static-analysis/src/language/javascript/parse.rs
description: "function testing(x) {\n    return x\n}\n    "
---
cell_exposed_values: {}
cell_depended_values: {}
triggerable_functions:
  testing:
    arguments:
      - x
    emit_event: []
    trigger_on: []
