toolchain/chidori-static-analysis/src/language/javascript/snapshots/chidori_static_analysis__language__javascript__parse__tests__report_for_simple_function.snap
---
source: chidori-static-analysis/src/language/javascript/parse.rs
description: "function testing(x) {\n    return x\n}\n    "
---
- - InFunction: testing
  - Params
  - IdentifierReferredTo:
      - x
      - false
- - InFunction: testing
  - IdentifierReferredTo:
      - x
      - true
