toolchain/chidori-static-analysis/src/language/javascript/snapshots/chidori_static_analysis__language__javascript__parse__tests__report_generation-2.snap
---
source: chidori-static-analysis/src/language/javascript/parse.rs
description: "function testing() {\n    ch.onEvent(\"new_file\");\n    ch.emitAs(\"file_created\");\n    const x = 2 + y;\n    return x\n}\n    "
---
internal_call_graph: {}
cell_exposed_values: {}
cell_depended_values:
  ch: {}
  y: {}
triggerable_functions:
  testing:
    arguments: []
    emit_event:
      - file_created
    trigger_on:
      - new_file
